--- a/src/index.html
+++ b/src/index.html
@@ -40,28 +40,28 @@
           <div class="step active">
             <div class="circle">1</div>
             <div class="step__div-right">
-              <p>Step 1</p>
+              <p>STEP 1</p>
               <p>YOUR INFO</p>
             </div>
           </div>
           <div class="step">
             <div class="circle">2</div>
             <div class="step__div-right">
-              <p>Step 2</p>
+              <p>STEP 2</p>
               <p>SELECT PLAN</p>
             </div>
           </div>
           <div class="step">
             <div class="circle">3</div>
             <div class="step__div-right">
-              <p>Step 3</p>
+              <p>STEP 3</p>
               <p>ADD-ONS</p>
             </div>
           </div>
           <div class="step">
             <div class="circle">4</div>
             <div class="step__div-right">
-              <p>Step 4</p>
+              <p>STEP 4</p>
               <p>SUMMARY</p>
             </div>
           </div>
@@ -84,32 +84,6 @@
         </div>
       </section>
     </main>
-
-    <!-- Arcade $9/mo Advanced $12/mo Pro $15/mo Monthly Yearly Go Back Next Step
-    Pick add-ons Add-ons help enhance your gaming experience. Online service
-    +$1/mo Larger storage Extra 1TB of cloud save
-    +$2/mo Customizable Profile Custom theme on your profile +$2/mo Go Back Next
-    Step -->
-
-    <!-- Step 3 end -->
-
-    <!-- Step 4 start -->
-
-    <!-- Finishing up Double-check everything looks OK before confirming. -->
-
-    <!-- Dynamically add subscription and add-on selections here -->
-
-    <!-- Total (per month/year) Go Back Confirm -->
-
-    <!-- Step 4 end -->
-
-    <!-- Step 5 start -->
-
-    <!-- Thank you! Thanks for confirming your subscription! We hope you have fun
-    using our platform. If you ever need support, please feel free to email us
-    at support@loremgaming.com. -->
-
-    <!-- Step 5 end -->
 
     <!-- <div class="attribution">
       Challenge by
