--- a/index.html
+++ b/index.html
@@ -80,6 +80,8 @@
         </div>
 
         <div class="main-sec__btn-div">
+          <a href="#" id="goBack" class="link-back">Go Back</a>
+          <div class="space"></div>
           <button id="nextBtn" class="btn btn--blue">Next Step</button>
         </div>
       </section>
